--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     font-optical-sizing: auto;
     font-weight: 700;
     font-style: normal;
-    background-color: #f7f4f4;
+    background-color: #ffffff;
 }
 
 
@@ -50,7 +50,7 @@
 .roupas {
     display: grid;
     grid-template-columns: repeat(3, 1fr); /* Exibe duas colunas por linha */
-    gap: 16px; /* Adiciona espaçamento entre as colunas e as linhas */
+    gap: 8px; /* Adiciona espaçamento entre as colunas e as linhas */
     align-items: center;
 }
 .roupa {
@@ -58,9 +58,8 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    border: 4px solid #ccc;
-    box-shadow: #0c0c0c;
-    padding: 16px;
+    border: 3px solid #ccc;
+    padding: 8px;
 }
 
 
@@ -143,6 +142,7 @@ footer p {
 footer img {
     margin-right: 32px;
     width: 32px;
+    background-color: #fff;
     
 }
 
@@ -152,7 +152,7 @@ footer img {
     .header-main header {
         font-size: 12px;
         padding: 8px 0;
-        border-bottom: 1px solid #ccc;
+        border-bottom: 3px solid #ccc;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -171,19 +171,26 @@ footer img {
 .roupas {
     display: grid;
     grid-template-columns: repeat(1, 1fr); /* Exibe duas colunas por linha */
-    gap: 8px; /* Adiciona espaçamento entre as colunas e as linhas */
-    border: none;
+    gap: 6px; /* Adiciona espaçamento entre as colunas e as linhas */
+}
+.roupa {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    border:none;
+    padding: 8px;
 }
 
-
 .roupa img {
-    width: 70%; /* Faz com que a imagem ocupe 100% da largura do contêiner pai */
+    width: 78%; /* Faz com que a imagem ocupe 100% da largura do contêiner pai */
     max-width: 100%;
     margin-bottom: 8px; /* Adiciona espaçamento abaixo da imagem */
     cursor: pointer;
     transition: transform 0.3s ease-in-out;
     overflow: hidden;
-    display: block
+    display: block;
+    
 }
 .price button {
     display: inline-block;
@@ -211,8 +218,6 @@ footer img {
     font-weight: bold;
 }
 
-
-
 section h3{
     display: flex;
     justify-content: center;
@@ -220,6 +225,20 @@ section h3{
     margin: 0 auto;
     padding: 8px;
     font-weight: bold;
+}
+footer p {
+    margin-left: 32px;
+    background-color: #ffffff;
+    color: #222222;
+    font-weight: bold;
+    font-size: 12px;
+}
+
+footer img {
+    margin-right: 32px;
+    width: 32px;
+    background-color: #fff;
+    
 }
 
 
